<resources>
    <string name="app_name">CaloriesWatcher</string>
    <string name="history">History</string>
    <string name="exercise">Exercise</string>
    <string name="eat">Eat</string>

    <!--Strings for MenuFragment-->
    <string name="menu_headline">What do you want to view?</string>
    <string name="menu_settings">SETTINGS</string>
    <string name="menu_eat">EAT</string>
    <string name="menu_exercise">EXERCISE</string>
    <string name="menu_history">HISTORY</string>


    <!-- Placeholder strings For Exercises -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newExercise">Input new or load existing exercise</string>
    <string name="light">Light</string>
    <string name="selectIntensity">Select intensity:</string>
    <string name="medium">Medium</string>
    <string name="intense">Intense</string>
    <string name="duration">Duration: minutes </string>
    <string name="exerciseName">Exercise name</string>
    <string name="save">Save</string>
    <string name="loadANDconfrim">Load / Confirm</string>
    <string name="simplePlaceholder">Write here</string>
    <string name="selected">Selected</string>

    <!-- Placeholder strings For Pedometer Settings (Done by Ville, Miikka might have screwed something! -->
    <string name="pedometer_settings_headline">Pedometer settings</string>
    <string name="pedometer_settings_edit_weight">Weight:</string>
    <string name="pedometer_settings_edit_step_lenght">Step length:</string>
    <string name="save_button">SAVE</string>

    <!--Strings for food intake-->
    <string name="food_intake_headline">Eating</string>
    <string name="food_intake_food_name">Enter food name</string>
    <string name="food_intake_food_amount">Enter portion size in grams</string>
    <string name="food_intake_calories">How many calories per 100g</string>

    <string name="action_back">BACK</string>
    <string name="action_settings">SETTINGS</string>

    <!--Strings for Histogram -->
    <string name="histogramExercises">Exercises</string>
    <string name="histogramFoods">Foods</string>
    <string name="histogramGraphs">Graphs</string>
    <string name="action_move">MOVE</string>
    <string name="use_metawear">Use Metawear sensor?</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="meta_timer">How often you need to move?</string>

</resources>
