<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Exercises">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/newExercise"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/exerciseName"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/intensityText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selectIntensity"
        android:layout_marginTop="80dp"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/light"
        android:layout_marginStart="16dp"
        android:layout_alignBaseline="@+id/medium"
        android:layout_alignParentStart="true" />

    <Button android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium"
        android:layout_alignBaseline="@+id/intense"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/intense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intense"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="12dp"
        android:layout_above="@+id/exerciseDuration"
        android:layout_alignParentEnd="true" />

    <EditText android:id="@+id/exerciseDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/duration"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loadANDconfrim"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_alignEnd="@+id/name" />


</RelativeLayout>
