<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.MenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_headline"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/menuHistoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_history"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/menuEatButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_eat"
        android:layout_below="@+id/menuHistoryButton"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/menuExerciseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_exercise"
        android:layout_alignParentStart="true"
        android:layout_below="@id/menuEatButton" />

    <!--<Button-->
        <!--android:id="@+id/menuSettingsButton"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/menu_settings"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_below="@id/menuExerciseButton" />-->
</RelativeLayout>
