<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.PedometerSettings">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_alignParentTop="true"
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_settings_headline"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/textViewWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_settings_edit_weight"
        android:layout_below="@id/headline" />

    <TextView
        android:id="@+id/textViewEditStepLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_settings_edit_step_lenght"
        android:layout_below="@+id/editTextWeight"/>
    <EditText
        android:id="@+id/editTextWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_below="@+id/textViewWeight"
        />
    <EditText
        android:id="@+id/editStepLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_below="@+id/textViewEditStepLength"
         />

    <Button
        android:id="@+id/pedometerSettingsSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:layout_below="@+id/editStepLength"
        />

</RelativeLayout>
