<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.MoveFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/use_metawear" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:id="@+id/metawearButtons">
    <Button
        android:id="@+id/buttonMetawearYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"/>
    <Button
        android:id="@+id/buttonMetawearNo"
        android:layout_below="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"/>
    </LinearLayout>


<FrameLayout
        android:id="@+id/moveContainer"
        android:layout_below="@id/metawearButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </FrameLayout>

</RelativeLayout>
