<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.Histograph">

    <Button android:id="@+id/histogramExercisesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/histogramExercises" />

    <Button android:id="@+id/histogramFoodButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/histogramFoods"
        android:layout_alignParentStart="true"
        android:layout_below="@id/histogramExercisesButton"/>

    <Button android:id="@+id/histogramGraphsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/histogramGraphs"
        android:layout_alignParentStart="true"
        android:layout_below="@id/histogramFoodButton"/>

    <FrameLayout android:id="@+id/histogramExtraFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="64dp"
        android:layout_below="@id/histogramGraphsButton"/>

</RelativeLayout>
