<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragments.FoodIntake">

    <TextView
        android:id="@+id/textGiveFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_intake_food_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/editTextFoodName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGiveFoodName"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/textGiveCalories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_intake_calories"
        android:layout_below="@id/editTextFoodName"
        android:layout_alignParentStart="true" />
    <EditText
        android:id="@+id/editTextCalories"
        android:inputType="number"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGiveCalories"
        android:layout_alignParentStart="true" />
    <TextView
        android:id="@+id/textGiveAmount"
        android:text="@string/food_intake_food_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGiveCalories"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />
    <EditText
        android:id="@+id/editTextFoodAmount"
        android:inputType="number"
        android:maxLines="1"
        android:imeOptions="actionDone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textGiveAmount"
        android:layout_alignParentStart="true" />
     <Button
        android:id="@+id/buttonSaveFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/editTextFoodAmount"
        android:text="@string/save_button" />

</RelativeLayout>
